<resources>
    <string name="app_name">LabPro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carousel_first_page_header">Inventory Overview</string>
    <string name="carousel_first_page_subheader">Easily view, track, and manage all inventory items to ensure accurate stock control.</string>
    <string name="carousel_second_page_header">Item Details</string>
    <string name="carousel_second_page_subheader">Access comprehensive information for each inventory item, including specifications and status.</string>
    <string name="carousel_third_page_header">QR Code Booking</string>
    <string name="carousel_third_page_subheader">Book items effortlessly by scanning unique QR codes for fast and reliable tracking.</string>
    <string name="carousel_fourth_page_header">Booking Management</string>
    <string name="carousel_fourth_page_subheader">Efficiently monitor, modify, and manage both active and historical booking records.</string>
    <string name="carousel_fifth_page_header">Laboratory Access</string>
    <string name="carousel_fifth_page_subheader">Schedule, authorize, and manage secure access to laboratory resources and equipment.</string>
    <string name="carousel_previous_button_text">Previous</string>
    <string name="carousel_next_button_text">Next</string>
    <string name="dialog_no_internet_connection">No Internet connection found. Please check your connection and try again.</string>
    <string name="dialog_confirm_return_confirm">CONFIRM</string>
    <string name="dialog_confirm_return_cancel">CANCEL</string>
    <string name="dialog_confirm_return_title">Return notice</string>
    <string name="dialog_confirm_return_header">
        Do you wish to proceed with the return of the item?
    </string>
    <string name="dialog_sign_up_header">Sign up notice</string>
    <string name="dialog_sign_up_body">For sign-in using <bold>Google</bold> and <bold>Facebook</bold>, only the User/SIM Number is required.</string>
    <string name="dialog_sign_up_ok">OK</string>
    <string name="dialog_sign_up_not_found">
        Sign-in unsuccessful. Kindly verify that your User/SIM Number and user type align with the information provided during the sign-up process.
    </string>
    <string name="dialog_loading_header">Please wait</string>
    <string name="dialog_loading_content">Establishing a secure connection with our servers . . .</string>
    <string name="nav_drawer_title">LabPro</string>
    <string name="nav_drawer_dashboard">Dashboard</string>
    <string name="nav_drawer_inventory">Inventory</string>
    <string name="nav_drawer_status">Borrow Status</string>
    <string name="nav_drawer_privacy">Privacy Settings</string>
    <string name="selected_item_title">PETRI DISH</string>
    <string name="selected_item_category">Category: </string>
    <string name="selected_item_category_placeholder">Tools</string>
    <string name="selected_item_status">Status: </string>
    <string name="selected_item_status_placeholder">Available</string>
    <string name="selected_item_scan">SCAN</string>
    <string name="selected_item_small">S</string>
    <string name="selected_item_medium">M</string>
    <string name="selected_item_large">L</string>
    <string name="selected_item_xlarge">XL</string>
    <string name="selected_item_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent purus tortor, scelerisque quis mattis vel, feugiat sed est. Aenean fringilla purus ac est lobortis, a accumsan mauris blandit. Duis viverra, dui ac finibus imperdiet, ligula massa imperdiet nisi, maximus ultricies nunc diam in neque. Mauris varius ipsum eu elit mollis, a scelerisque massa pretium. Vivamus sodales, mauris aliquet euismod tincidunt, massa cursus turpis, sed efficitur dolor odio nec ligula.
    </string>
    <string name="account_opening_header_1">LabPro: Elevating Your Borrowing Experience - Scan, Safeguard, Succeed!</string>
    <string name="account_opening_login">Log in</string>
    <string name="account_opening_sign_up">Sign up</string>
    <string name="account_opening_copyright">This app is owned by the rightful owners. All rights reserved.</string>
    <string name="account_login_lrn">User/SIM Number</string>
    <string name="account_login_proceed">PROCEED</string>
    <string name="account_login_header_1">Login</string>
    <string name="account_login_header_2">Please login to continue</string>
    <string name="account_login_username">Username@gmail.com</string>
    <string name="account_login_password">Password</string>
    <string name="account_login_button">Log in</string>
    <string name="account_login_no_account">Don\'t have an account? REGISTER</string>
    <string name="account_login_dropdown_student">STUDENT</string>
    <string name="account_login_dropdown_teacher">TEACHER</string>
    <string name="account_login_dropdown_admin">ADMIN</string>
    <string name="account_login_google">Continue with Google</string>
    <string name="account_login_facebook">Continue with Facebook</string>
    <string-array name="account_login_spinner">
        <item>STUDENT</item>
        <item>TEACHER</item>
        <item>ADMIN</item>
    </string-array>
    <string name="facebook_app_id">891198342317068</string>
    <string name="fb_login_protocol_scheme">fb891198342317068</string>
    <string name="facebook_client_token">e4e56e57412c98927cd9d974c5d6ba22</string>
    <string name="account_register_header_1">Register</string>
    <string name="account_register_header_2">Please register to continue</string>
    <string name="account_register_sign_up">Sign up</string>
    <string name="account_register_header_3">OR SIGN UP USING</string>
    <string name="account_register_header_4">OR</string>
    <string name="account_register_existing_account">Already have an account? LOGIN</string>
    <string name="account_register_lrn">User number (preferably a unique SIM card number)</string>
    <string name="account_register_username">Username@gmail.com</string>
    <string name="account_register_password">Password</string>
    <string name="account_register_confirm_password">Confirm password</string>
    <string-array name="account_register_spinner">
        <item>STUDENT</item>
        <item>TEACHER</item>
    </string-array>
    <string name="terms_conditions_header">Terms of Use</string>
    <string name="terms_condition_app_name">LABPRO APP</string>
    <string name="terms_conditions_accept">Accept</string>
    <string name="terms_conditions_decline">Decline</string>
    <string name="terms_conditions_1.1">
        1. Your acceptance of these Terms
    </string>
    <string name="privacy_title">PRIVACY SETTINGS</string>
    <string name="privacy_tos_title">Terms of Service</string>
    <string name="privacy_tos_header_1">1. Agreement to Terms</string>
    <string name="privacy_tos_item">
        1.1\tBy using, visiting, accessing, and/or registering with the app (including all content available through the app), you acknowledge that you have read, understood, and agree to be bound by these Terms of Service and the terms and conditions of our Privacy Policy, which are incorporated into these Terms of Service by reference. If you do not agree to be bound by these Terms of Service (as amended from time to time), please do not use the app.

        \n\n1.2\tWe reserve the right to change, modify, add, or delete parts of these Terms of Service at any time and without further notice. Such amendments shall be effective upon posting the revised Terms of Service on this app.

        \n\n1.3\tThese Terms of Service are binding on Members and on non-Members who access and use the app ("Users").
    </string>
    <string name="privacy_tos_header_2">2. Access and Use of this Website</string>
    <string name="privacy_tos_item_2">
        2.1\tWe hereby grant you permission to use the app in accordance with these Terms of Service, provided that:
        \n\n(a)\tYou use the app solely for your personal, non-commercial use.
        \n(b)\tYou will not copy or distribute any part of the app without our prior written authorization.
        \n(c)\tYou will not alter, modify, edit, or otherwise change any part of the Website other than as may be reasonably necessary to use the app for its intended purpose.
        \n(d)\tYou will comply with these Terms of Service.
    </string>
    <string name="privacy_tos_header_3">3. User Obligations</string>
    <string name="privacy_item_3">
        3.1\tYou agree not to use the app for any illegal purposes and agree to use it in accordance with all relevant laws.
        \n\n3.2\tYou agree not to upload, post on, or transmit through the app any computer viruses, malware, or anything else designed to interfere with, interrupt, or disrupt the normal operating procedures of a computer.
        \n\n3.3\tYou will not post or otherwise disseminate on the app any material that is unlawful, obscene, defamatory, libelous, threatening, pornographic, harassing, hateful, racially offensive, or encourages conduct that would be considered a criminal offense.
        \n\n3.4\tYou will not use the app in a manner that may cause the app to be interrupted, damaged, rendered less efficient, or impair its effectiveness or functionality.
        \n\n3.5\tYou agree not to collect personally identifiable information from the app and not to use the communication systems provided by the app for any commercial solicitation purposes.
        \n\n3.6\tYou will not use the app in any manner that violates or infringes the rights of any person, firm, or company, including but not limited to intellectual property rights, confidentiality rights, and privacy rights.
        \n\n3.7\tIf you have any right, claim, or action against any User arising out of the User\'s use of the app, you agree to pursue such right, claim, or action independently of us, except as provided in specific circumstances outlined in these Terms of Service.
        \n\n3.8\tYou acknowledge that our content, trademarks, copyright, patents, logos, domain names, and other related intellectual property rights belong to us and/or our affiliates or licensors, and you will not do any act that infringes those rights.
    </string>
    <string name="report_name">Name: </string>
    <string name="report_name_placeholder">Tool/Chemical Name</string>
    <string name="report_item_num">Item#: </string>
    <string name="report_item_num_placeholder">4859374</string>
    <string name="report_category">Category: </string>
    <string name="report_category_placeholder">Tools</string>
    <string name="report_title">Report Title</string>
    <string name="admin_report_report_date">December 05, 2023, 04:35:16 PM</string>
    <string name="admin_report_content">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent purus tortor, scelerisque quis mattis vel, feugiat sed est. Aenean fringilla purus ac est lobortis, a accumsan mauris blandit. Duis viverra, dui ac finibus imperdiet, ligula massa imperdiet nisi, maximus ultricies nunc diam in neque. Mauris varius ipsum eu elit mollis, a scelerisque massa pretium.
    </string>
    <string name="admin_report_mark">ALREADY RESOLVED?</string>
</resources>